Add AI suggestions testing and refine prompt template
- Created test scripts to test AI suggestions on 5 PDFs with 3 attempts each
- Added automated scoring script using the rubric (score-all-results.js)
- Scored all 12 test attempts: average 35.6/40 (89.0%) - Excellent
- Updated prompt template to match rubric requirements:
  - Emphasized em dashes (—) with spaces around them
  - Added sentence case requirement for filenames and titles
  - Clarified no file extension in filename field
  - Added requirement for concise Subject/Vendor (1-3 words)
  - Specified natural person names (not slug format) in filenames
  - Added duplicate keyword check instruction
  - Enhanced examples with good/bad comparisons
- Test results show common issues: missing em dashes, duplicate tags, invalid tags
- All test results and scores documented in test-results.md

--- a/package.json
+++ b/package.json
@@ -7,11 +7,22 @@
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": ["pdf", "metadata", "viewer"],
+  "keywords": [
+    "pdf",
+    "metadata",
+    "viewer"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "canvas": "^3.2.1",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "pdf-lib": "^1.17.1"
+    "node-fetch": "^2.7.0",
+    "openai": "^6.16.0",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.2.4",
+    "pdfjs-dist": "^5.4.530",
+    "puppeteer": "^24.34.0"
   }
 }
