--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "screen": "node scripts/screen-collection.js",
+    "screen:verbose": "node scripts/screen-collection.js --verbose"
   },
   "keywords": [
     "pdf",
