--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "screen": "node scripts/screen-collection.js",
     "screen:verbose": "node scripts/screen-collection.js --verbose"
   },
@@ -26,5 +27,8 @@
     "pdf-parse": "^2.2.4",
     "pdfjs-dist": "^5.4.530",
     "puppeteer": "^24.34.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
